--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
                         <div class="home__data">
                             <h1 class="home__title">Greetings, I'm Bui Van Binh</h1>
-                            <h3 class="home__subtitle">Data Enthusiast</h3>
+                            <h3 class="home__subtitle">Data Analyst</h3>
                             <p class="home__description">A fresh graduate with E-commcerce background, 1 year of practical working experience with data.</p>
                             <a href="#contact" class="button button--flex home__button">
                                 Contact Me<i class="uil uil-message button__icon"></i>
