--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="packages/BuiVanBinh_DataAnalyst.pdf" class="button button--flex">
+                            <a download="" href="packages/BuiVanBinh_DS.pdf" class="button button--flex">
                                 Download CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
@@ -162,7 +162,6 @@
                                 <i class="uil uil-analytics skills__icon"></i>
                                <div>
                                    <h1 class="skills__title">Technical Tools</h1>
-                                   <span class="skills__subtitle">Self-taught</span>
                                </div>
 
                                <i class="uil uil-angle-down skills__arrow"></i>
@@ -189,7 +188,7 @@
                                <div class="skills__data">
                                    <div class="skills__titles">
                                        <h3 class="skills__name">Power BI</h3>
-                                       <span class="skills__number">50%</span>
+                                       <span class="skills__number">60%</span>
                                    </div>
                                    <div class="skills__bar">
                                        <span class="skills__percentage skills__sql"></span>
@@ -212,7 +211,6 @@
                                 <i class="uil uil-books skills__icon"></i>
                                <div>
                                    <h1 class="skills__title">Domain Knowledge</h1>
-                                   <span class="skills__subtitle">Courses & Books</span>
                                </div>
 
                                <i class="uil uil-angle-down skills__arrow"></i>
@@ -220,7 +218,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">Digital Marketing</h3>
+                                        <h3 class="skills__name">Medical & Healthcare</h3>
                                         <span class="skills__number">70%</span>
                                     </div>
                                     <div class="skills__bar">
@@ -236,19 +234,10 @@
                                        <span class="skills__percentage skills__counter"></span>
                                    </div>
                                </div>
-                               <div class="skills__data">
-                                    <div class="skills__titles">
-                                      <h3 class="skills__name">E-logistics</h3>
-                                      <span class="skills__number">60%</span>
-                                    </div>
-                                    <div class="skills__bar">
-                                       <span class="skills__percentage skills__google"></span>
-                                    </div>
-                                </div>
                                 <div class="skills__data">
                                    <div class="skills__titles">
                                        <h3 class="skills__name">E-commerce</h3>
-                                       <span class="skills__number">55%</span>
+                                       <span class="skills__number">60%</span>
                                    </div>
                                    <div class="skills__bar">
                                        <span class="skills__percentage skills__office"></span>
@@ -265,7 +254,6 @@
                                <i class="uil uil-comment-lines skills__icon"></i>
                                <div>
                                    <h1 class="skills__title">Soft Skills</h1>
-                                   <span class="skills__subtitle">Networking</span>
                                </div>
 
                                <i class="uil uil-angle-down skills__arrow"></i>
@@ -291,7 +279,7 @@
                                </div>
                                <div class="skills__data">
                                    <div class="skills__titles">
-                                       <h3 class="skills__name">Quick learning & quick adaption</h3>
+                                       <h3 class="skills__name">Quick learning & quick adaptation</h3>
                                        <span class="skills__number">75%</span>
                                    </div>
                                    <div class="skills__bar">
@@ -337,7 +325,7 @@
              <!--==================== QUALIFICATION 1 ====================--> 
              <div class="qualification__data">
                  <div>
-                     <h3 class="qualification__title">IELTS Band 7.0 Certification</h3>
+                     <h3 class="qualification__title">IELTS 7.0 Certification</h3>
                      <span class="qualification__subtitle">British Council</span>
                      <div class="qualification__calendar">
                         <i class="uil uil-calendar-alt"></i>
@@ -361,7 +349,7 @@
 
                 <div>
                     <h3 class="qualification__title">Bachelor's Degree in E-commerce</h3>
-                    <span class="qualification__subtitle">University of Economics and Laws</span>
+                    <span class="qualification__subtitle">University of Economics and Laws - VNUHCM</span>
                     <div class="qualification__calendar">
                        <i class="uil uil-calendar-alt"></i>
                        2018 - 2022
@@ -372,8 +360,8 @@
             <!--==================== QUALIFICATION 3 ====================--> 
             <div class="qualification__data">
                 <div>
-                    <h3 class="qualification__title">AWS Cloud Practitioner Certification</h3>
-                    <span class="qualification__subtitle">Amazon Web Services</span>
+                    <h3 class="qualification__title">Data Science & Machine Learning Certificate</h3>
+                    <span class="qualification__subtitle">University of Science - VNUHCM</span>
                     <div class="qualification__calendar">
                        <i class="uil uil-calendar-alt"></i>
                        10/2022
@@ -395,8 +383,8 @@
                 </div>
 
                 <div>
-                    <h3 class="qualification__title">Free Online Bootcamp Certificates </h3>
-                    <span class="qualification__subtitle">Self-learning</span>
+                    <h3 class="qualification__title">Self-Learning </h3>
+                    <span class="qualification__subtitle">Books & Courses</span>
                     <div class="qualification__calendar">
                        <i class="uil uil-calendar-alt"></i>
                        Present
@@ -436,7 +424,7 @@
    
                    <div>
                        <h3 class="qualification__title">Data Analyst</h3>
-                       <span class="qualification__subtitle">Headway Technology</span>
+                       <span class="qualification__subtitle">VTECHS-HOLDINGS CO., LTD</span>
                        <div class="qualification__calendar">
                           <i class="uil uil-calendar-alt"></i>
                           06/2022 - 02/2023
@@ -447,11 +435,11 @@
                <!--==================== QUALIFICATION 3 ====================--> 
                <div class="qualification__data">
                    <div>
-                       <h3 class="qualification__title">Looking for New Opportunity</h3>
-                       <span class="qualification__subtitle">Self-employed</span>
+                       <h3 class="qualification__title">Commercial Excellence Specialist</h3>
+                       <span class="qualification__subtitle">B.BRAUN VIETNAM CO., LTD</span>
                        <div class="qualification__calendar">
                           <i class="uil uil-calendar-alt"></i>
-                          Present
+                          03/2023 - Present
                        </div>
                    </div>
    
@@ -492,7 +480,7 @@
                     <ul class="services__modal-services grid">
                         <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>Conducting ETL processes, extracting insights from data.</p>
+                            <p>Conducting EDA processes, extracting insights from data.</p>
                         </li>
 
                         <li class="services__modal-service">
@@ -533,7 +521,7 @@
 
                         <li class="services__modal-service">
                             <i class="uil uil-check-circle services__modal-icon"></i>
-                            <p>Detecting fraudulent and abnormal data.</p>
+                            <p>Help to improve data-driven operation and decision-making.</p>
                         </li>
 
                         <li class="services__modal-service">
@@ -600,7 +588,7 @@
 
                 <div class="portfolio_">
                     <h3 class="portfolio__title">Hotel Reservation</h3>
-                    <p class="portfolio__description">Data analysis dashboard built with Power BI.</p>
+                    <p class="portfolio__description">Data Report built with Power BI.</p>
                     <a href="https://github.com/BinhBui1362/projects/blob/main/Hotel.pbix" class="button button--flex button--small portfolio__button">
                         Link to Source File
                         <i class="uil uil-arrow-right button__icon"></i>
