--- a/index.html
+++ b/index.html
@@ -626,6 +626,21 @@
                 </div>
             </div>
                 </div>
+            <!--==================== PORTFOLIO 4 ====================-->
+        
+            <div class="portfolio__content grid swiper-slide">
+                <img src="./packages/images/recommender.png" alt="" class="portfolio__img">
+
+                <div class="portfolio_">
+                    <h3 class="portfolio__title">Product Recommendation System</h3>
+                    <p class="portfolio__description">Recommend product to users based on similar products/users rating.</p>
+                    <a href="https://github.com/BinhBui1362/projects/blob/main/HeartDisease.ipynb" class="button button--flex button--small portfolio__button">
+                        Link to Source File
+                        <i class="uil uil-arrow-right button__icon"></i>
+                    </a>
+                </div>
+            </div>
+                </div>
 
             <!-- add arrows-->
             <div class="swiper-button-next">
